--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </li>
         <li class="link-wrapper">
           <a href="https://www.artstation.com/GaelleSeguillon/store" target="_blank" class="link">
-            <img src="src/images/artstation.svg" alt="ArtStation Store" class="link-image">
-            <span class="link-text">ArtStation Store</span>
+            <img src="src/images/artstation.svg" alt="Store" class="link-image">
+            <span class="link-text">Store</span>
           </a>
         </li>
 
@@ -83,8 +83,8 @@
 
         <li class="link-wrapper">
           <a href="https://www.learnsquared.com/courses/environment-design" target="_blank" class="link">
-            <img src="./src/images/learnsqure.webp" alt="Learnsquared" class="link-image">
-            <span class="link-text">Learnsquared course</span>
+            <img src="./src/images/learnsqure.webp" alt="Online" class="link-image">
+            <span class="link-text">Online<br/>course</span>
           </a>
         </li>
       </ul>
