--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </li>
 
         <li class="link-wrapper">
-          <a href="https://twitter.com/intent/follow?screen_name=GaelleSeguillon" target="_blank" class="link">
+          <a href="https://twitter.com/GaelleSeguillon" target="_blank" class="link">
             <img src="./src/images/twitter.svg" alt="Twitter" class="link-image">
             <span class="link-text">Twitter</span>
           </a>
