--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li class="link-wrapper">
           <a href="https://twitter.com/GaelleSeguillon" target="_blank" class="link">
             <img src="./src/images/twitter.svg" alt="Twitter" class="link-image">
-            <span class="link-text">Twitter</span>
+            <span class="link-text">X</span>
           </a>
         </li>
         
@@ -67,7 +67,7 @@
         <li class="link-wrapper">
           <a href="https://www.artstation.com/GaelleSeguillon/store" target="_blank" class="link">
             <img src="src/images/artstation.svg" alt="Store" class="link-image">
-            <span class="link-text">Store</span>
+            <span class="link-text">Photopacks</span>
           </a>
         </li>
 
@@ -84,6 +84,20 @@
             <span class="link-text">Online course</span>
           </a>
         </li>
+
+        <li class="link-wrapper">
+          <a href="https://iamagmentorship.iamag.co/u/6474daee-eab7-4a61-ac5e-03884c84c67d" target="_blank" class="link">
+            <img src="./src/images/learnsqure.webp" alt="Online" class="link-image">
+            <span class="link-text">Mentorship</span>
+          </a>
+        </li>
+
+        <li class="link-wrapper">
+          <a href="https://displate.com/artist/gaelleseguillon" target="_blank" class="link">
+            <img src="./src/images/learnsqure.webp" alt="Online" class="link-image">
+            <span class="link-text">Displate prints</span>
+          </a>
+        </li>
       </ul>
       <a href="./src/Gaëlle Seguillon.vcf" download class="contact-button">
         Save contact
@@ -93,3 +107,4 @@
 </body>
 
 </html>
+
