--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <li class="link-wrapper">
           <a href="https://displate.com/artist/gaelleseguillon" target="_blank" class="link">
-            <img src="./src/images/learnsqure.webp" alt="Online" class="link-image">
+            <img src="./src/images/displate.webp" alt="Online" class="link-image">
             <span class="link-text">Displate prints</span>
           </a>
         </li>
@@ -107,4 +107,5 @@
 </body>
 
 </html>
+
 
