--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <li class="link-wrapper">
           <a href="https://www.learnsquared.com/courses/environment-design" target="_blank" class="link">
-            <img src="./src/images/learnsqure.webp" alt="Online" class="link-image">
+            <img src="./src/images/learnsquared.webp" alt="Online" class="link-image">
             <span class="link-text">Online course</span>
           </a>
         </li>
@@ -107,5 +107,6 @@
 </body>
 
 </html>
+
 
 
