--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <li class="link-wrapper">
           <a href="https://twitter.com/GaelleSeguillon" target="_blank" class="link">
-            <img src="./src/images/twitter.svg" alt="Twitter" class="link-image">
+            <img src="./src/images/X.svg.png" alt="X" class="link-image">
             <span class="link-text">X</span>
           </a>
         </li>
@@ -66,14 +66,14 @@
         
         <li class="link-wrapper">
           <a href="https://www.artstation.com/GaelleSeguillon/store" target="_blank" class="link">
-            <img src="src/images/artstation.svg" alt="Store" class="link-image">
+            <img src="src/images/artstation.svg" alt="Photopacks" class="link-image">
             <span class="link-text">Photopacks</span>
           </a>
         </li>
 
         <li class="link-wrapper">
           <a href="https://www.gaelleseguillon.com/resume" target="_blank" class="link">
-            <img src="./src/images/website.webp" alt="Website" class="link-image">
+            <img src="./src/images/website2.webp" alt="Website" class="link-image">
             <span class="link-text">Website</span>
           </a>
         </li>
@@ -87,7 +87,7 @@
 
         <li class="link-wrapper">
           <a href="https://iamagmentorship.iamag.co/u/6474daee-eab7-4a61-ac5e-03884c84c67d" target="_blank" class="link">
-            <img src="./src/images/learnsqure.webp" alt="Online" class="link-image">
+            <img src="./src/images/learnsqure.webp" alt="Mentorship" class="link-image">
             <span class="link-text">Mentorship</span>
           </a>
         </li>
@@ -107,6 +107,7 @@
 </body>
 
 </html>
+
 
 
 
