--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         
         <li class="link-wrapper">
           <a href="https://www.artstation.com/GaelleSeguillon/store" target="_blank" class="link">
-            <img src="src/images/artstation.svg" alt="Photopacks" class="link-image">
+            <img src="src/images/photopacks.webp" alt="Photopacks" class="link-image">
             <span class="link-text">Photopacks</span>
           </a>
         </li>
@@ -107,6 +107,7 @@
 </body>
 
 </html>
+
 
 
 
