--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <li class="link-wrapper">
           <a href="https://twitter.com/GaelleSeguillon" target="_blank" class="link">
-            <img src="./src/images/X.svg.png" alt="X" class="link-image">
+            <img src="./src/images/X.webp" alt="X" class="link-image">
             <span class="link-text">X</span>
           </a>
         </li>
@@ -87,7 +87,7 @@
 
         <li class="link-wrapper">
           <a href="https://iamagmentorship.iamag.co/u/6474daee-eab7-4a61-ac5e-03884c84c67d" target="_blank" class="link">
-            <img src="./src/images/learnsqure.webp" alt="Mentorship" class="link-image">
+            <img src="./src/images/" alt="Mentorship" class="link-image">
             <span class="link-text">Mentorship</span>
           </a>
         </li>
@@ -107,6 +107,7 @@
 </body>
 
 </html>
+
 
 
 
